# MultiDoc-LLM-Summary-Tool

./: .gitignore  README.md  example_usage.py  llm_example.py  pyproject.toml  requirements.txt  test_chunking.py  test_chunking_simple.py  test_large_document.py
data/: README.md
dev_tools/: README.md
dev_tools/debug/: debug-commands-reference.md  pdb-debugging-guide.md  pdb_examples.py  pytest-debugging-guide.md  test_demo_failing_test.py
dev_tools/examples/: monitor_progress.py  quick_llm_test.py  summary_aggregation_demo.py  test_batch_aggregation.py  test_chunking.py  test_chunking_simple.py  test_improved_aggregation.py  test_large_document.py  test_llm_aggregation.py  test_redundancy_detection.py
src/document_summarizer/: __init__.py
src/document_summarizer/base/: __init__.py  document_reader.py  pdf_reader.py
src/document_summarizer/interfaces/: __init__.py  llm_interface.py  openai_llm.py
src/document_summarizer/models/: __init__.py  metadata.py
tests/: __init__.py  test_document_reader.py  test_llm_interface.py  test_llm_interface_with_mock.py  test_metadata.py  test_pdf_reader.py
